config-root/namespaces/jx-production/nodeapp-night/nodeapp-night-nodeapp-night-deploy.yaml
# Source: nodeapp-night/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-night-nodeapp-night
  labels:
    draft: draft-app
    chart: "nodeapp-night-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'nodeapp-night'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: nodeapp-night-nodeapp-night
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodeapp-night-nodeapp-night
    spec:
      serviceAccountName: nodeapp-night-nodeapp-night
      containers:
        - name: nodeapp-night
          image: "gcr.io/compute-project-183119/nodeapp-night:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 0.1
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
