config-root/namespaces/jx-production/nodeapp-night/nodeapp-night-ingress.yaml
# Source: nodeapp-night/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'nodeapp-night'
  name: nodeapp-night
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: nodeapp-night
                port:
                  number: 80
      host: nodeapp-night-jx-production.34.132.47.65.nip.io
